k8s/coma/apps/wp-gliders/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-gliders
  namespace: wp-gliders
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "gliders.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wp-gliders-wordpress
                port:
                  number: 80
  tls:
    - hosts:
        - "gliders.artichoke.cc"
      secretName: tls-secret
